@@ -111,16 +111,12 @@
 		<junit.jupiter.version>5.10.2</junit.jupiter.version>
 		<maven.compiler.version>3.10.1</maven.compiler.version>
 		<maven.toolchains.version>3.0.0</maven.toolchains.version>
-		<jboss.version>3.5.1.Final</jboss.version>
 		<lombok.version>1.18.30</lombok.version>
-		<grpc.version>1.62.2</grpc.version>
+		<grpc.version>1.63.0</grpc.version>
 		<bouncyCastle.version>1.78</bouncyCastle.version>
-		<!--Compatible versions with gRPC could be found here: https://github.com/grpc/grpc-java/blob/master/SECURITY.md#netty -->
-		<nettyHandler.version>4.1.100.Final</nettyHandler.version>
 		<swagger.version>2.2.15</swagger.version>
-		<undertow.version>2.3.14.Final</undertow.version>
+		<armeria.version>1.29.3</armeria.version>
 		<prometheus.version>1.3.1</prometheus.version>
-		<xnio.version>3.8.14.Final</xnio.version>
 		<byteBuddy.version>1.14.17</byteBuddy.version>
 	</properties>
 
@@ -443,8 +439,6 @@
 					<compilerVersion>${java.version}</compilerVersion>
 					<compilerArgs>
 						<arg>-parameters</arg>
-						<arg>--add-exports</arg>
-						<arg>ch.qos.logback.core/ch.qos.logback.core.hook=evita.server</arg>
 					</compilerArgs>
 					<annotationProcessorPaths>
 						<path>
